gaming trend for arrekz

--- a/style/styles.css
+++ b/style/styles.css
@@ -107,6 +107,33 @@ th, td{
     padding:2rem;
 }
 
+  /* Gaming Trend Page*/
+.trend-page{
+    overflow-y: visible;
+    overflow: visible;
+    padding: 3rem 3rem;
+}
+.trends{
+    overflow: visible;
+    height: auto;
+    text-align: center;
+}
+
+.black-text{
+    color:black;
+}
+
+button{
+    color: black;
+    background-color: rgb(35, 27, 122);
+    border-radius: 2rem;
+    padding: 1rem 2rem;
+    margin: 2rem 2rem;
+}
+.google-trends{
+    overflow: visible;
+}
+
 @media screen and (max-width: 600px) {
     .heading-section {
         font-size: 0.8rem;
@@ -142,6 +169,8 @@ th, td{
         grid-row:3/3;
     }
   }
+
+
 
 @media screen and (max-width: 600px) {
     .hero{
@@ -189,3 +218,4 @@ th, td{
 * {
     box-sizing: border-box;
 }
+
